--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <a href="/shop-rel1-link">
-                            <img src="/img/6.jpg" alt="rel1">
+                            <img src="img/6.jpg" alt="rel1">
                         </a>
                     </div>
                     <div class="product-details">
@@ -289,7 +289,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <a href="/shop-rel2-link">
-                            <img src="/img/7.jpg" alt="rel2">
+                            <img src="img/7.jpg" alt="rel2">
                         </a>
                     </div>
                     <div class="product-details">
@@ -302,7 +302,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <a href="/shop-rel3-link">
-                            <img src="/img/8.jpg" alt="rel3">
+                            <img src="img/8.jpg" alt="rel3">
                         </a>
                     </div>
                     <div class="product-details">
@@ -315,7 +315,7 @@
                 <div class="product-card">
                     <div class="product-image">
                         <a href="/shop-rel4-link">
-                        <img src="/img/9.jpg" alt="rel4">
+                        <img src="img/9.jpg" alt="rel4">
                         </a>
                     </div>
                     <div class="product-details">
