--- a/index.html
+++ b/index.html
@@ -398,6 +398,6 @@
             </form>
         </div>
     </div>
-    <script src="/shop/assets/scripts.js"></script>
+    <script src="assets/scripts.js"></script>
 </body>
 </html>
