--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <a href="/shop-rel2-link">
                             <h3>rel2-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h3>
                         </a>
-                        <div class="price">¥228.00</div>
+                        <div class="price">฿228.00</div>
                     </div>
                 </div>
                 <div class="product-card">
@@ -309,7 +309,7 @@
                         <a href="/shop-rel3-link">
                             <h3>rel3-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h3>
                         </a>
-                        <div class="price">¥135.00</div>
+                        <div class="price">฿135.00</div>
                     </div>
                 </div>
                 <div class="product-card">
@@ -322,7 +322,7 @@
                         <a href="/shop-rel4-link">
                             <h3>rel4-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h3>
                         </a>
-                        <div class="price">¥45.00</div>
+                        <div class="price">฿45.00</div>
                     </div>
                 </div>
             </div>
