--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <nav class="mobile-nav">
             <ul>
-                <button class="close-menu" id="closeMenu"></button>
+                <li><button class="close-menu" id="closeMenu"></button></li>
                 <li><a href="/">Home</a></li>
                 <li><a href="/shop-menu1-link">menu1</a></li>
                 <li><a href="/shop-menu2-link">menu2</a></li>
