--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
         </div>
     </header>
     <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <h2>Menu</h2>
+            <button class="close-menu" id="closeMenu">&times;</button>
+        </div>
         <nav class="mobile-nav">
             <ul>
-                <li><button class="close-menu" id="closeMenu"></button></li>
                 <li><a href="/">Home</a></li>
                 <li><a href="/shop-menu1-link">menu1</a></li>
                 <li><a href="/shop-menu2-link">menu2</a></li>
