--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                     </div>
                     <!-- 数量选择 -->
                     <div class="option-group">
-                        <span class="option-label">数量:</span>
+                        <label for="quantity-input" class="option-label">数量:</label>
                         <div class="quantity-selector">
                             <button class="quantity-btn decrease">-</button>
                             <input type="number" class="quantity-input" id="quantity-input" value="1" min="1">
