--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
              border-color: #3498db;
         }
         .add-to-cart {
-            background: #3498db;
+            background: #2c3e50;
             color: white;
             border: none;
             padding: 12px 25px;
@@ -276,7 +276,7 @@
             transition: background 0.3s;
         }
         .add-to-cart:hover {
-            background: #2980b9;
+            background: #2c3e50;
         }
         /* 相关推荐 */
         .related-products {
@@ -330,7 +330,7 @@
             height: 2.8em;
         }
         .product-card-price {
-            color: #e74c3c;
+            color: #2c3e50;
             font-weight: bold;
         }
         /* 评论区域 - 修改为星级评分 */
@@ -414,7 +414,7 @@
             margin-bottom: 8px;
         }
         .write-review-btn {
-            background: #51beed;
+            background: #2c3e50;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -818,7 +818,7 @@
                 <h1 class="product-title">高品质商品名称</h1>
                 <div class="product-price">¥299.00</div>
                 <div class="product-rating">
-                    <div class="stars">
+                    <div class="average-stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -967,7 +967,6 @@
             <div class="review-item">
                 <div class="review-header">
                     <span class="review-author">张***</span>
-                    <span class="review-date">2023-10-15</span>
                 </div>
                 <div class="review-rating">
                     <i class="fas fa-star"></i>
@@ -981,7 +980,19 @@
             <div class="review-item">
                 <div class="review-header">
                     <span class="review-author">李***</span>
-                    <span class="review-date">2023-10-12</span>
+                </div>
+                <div class="review-rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p class="review-content">商品不错，就是包装有点简单，好在没有损坏。使用效果符合预期，性价比高。</p>
+            </div>
+            <div class="review-item">
+                <div class="review-header">
+                    <span class="review-author">李***</span>
                 </div>
                 <div class="review-rating">
                     <i class="fas fa-star"></i>
