--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@
             font-size: 1rem;
             margin-bottom: 8px;
             display: -webkit-box;
-            -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
             height: 2.8em;
@@ -360,6 +359,11 @@
         }
         .average-stars {
             color: #f39c12;
+            font-size: 1.2rem;
+            margin: 5px 0;
+        }
+        .average-stars-span  {
+            color: #000000;
             font-size: 1.2rem;
             margin: 5px 0;
         }
@@ -824,7 +828,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-alt"></i>
-                        <span>(128 条评价)</span>
+                        <span class="average-stars-span">(128 条评价)</span>
                     </div>
                 </div>
                 <!-- 新增：商品选项 -->
